--- a/docs/index.haml
+++ b/docs/index.haml
@@ -1,1 +1,6 @@
-123woiej
+!!!
+  %html
+    %head
+      %link(rel="stylesheet" type="text/css" href="index-style.css")
+    %body
+      Stuff goes here
