--- a/docs/index.haml
+++ b/docs/index.haml
@@ -1,6 +1,6 @@
 !!!
   %html
     %head
-      %link(rel="stylesheet" type="text/css" href="index-style.css")
+      %link(href="index-style.css")
     %body
       Stuff goes here
