--- a/docs/index.haml
+++ b/docs/index.haml
@@ -1,6 +1,6 @@
 !!!
-  %html
-    %head
-      %link(href="index-style.css")
-    %body
-      Stuff goes here
+%html
+  %head
+    %link{:href "index-style.css"}
+  %body
+    Stuff goes here
